fix: spacing between lists

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
 
 @layer components {
 	.u-list {
-		@apply flex justify-between flex-wrap gap-2 p-0 list-none;
+		@apply flex justify-between flex-wrap gap-2 p-0 pb-6 list-none;
 	}
 	.u-list li {
 		@apply relative flex-1 flex items-center w-full min-w-fit py-2 px-4 bg-base-200 rounded-lg;
@@ -24,7 +24,7 @@
 	}
 	.o-list {
 		counter-reset: item;
-		@apply p-0 list-none;
+		@apply p-0 pb-6 list-none;
 	}
 	.o-list li {
 		counter-increment: item;
